--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,23 @@
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
-    "./signup":"./src/signup.tsx"
+    "./signup":"./src/signup.tsx",
+    "./appbar": "./src/appbar.tsx",
+    "./dashboard": "./src/dashboard.tsx",
+    "./slider":"./src/slider.tsx",
+    "./sliderbutton": "./src/sliderbutton.tsx",
+    "./menuCards":"./src/menuCards.tsx",
+    "./userPicture": "./src/userPicture.tsx",
+    "./imgupload": "./src/imgupload.tsx",
+    "./modal": "./src/modal.tsx",
+    "./projectcomponent": "./src/projectcomponent.tsx",
+    "./upload":"./src/upload.tsx",
+    "./projectlabelling":"./src/projectlabelling.tsx",
+    "./projectBar": "./src/projectBar.tsx",
+    "./rolePage": "./src/rolePage.tsx",
+    "./roleCard": "./src/roleCard.tsx",
+    "./Editordashboard": "./src/editordashboard.tsx",
+    "./sharecodecomponent": "./src/sharecodecomponent.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
