--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "web",
+  "name": "@repo/client-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
