--- a/apps/client-app/tsconfig.json
+++ b/apps/client-app/tsconfig.json
@@ -13,6 +13,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "../../packages/ui/src/signup.tsx"  ],
+, "../../packages/ui/src/signup.tsx", "../../packages/ui/src/page.tsx"  ],
   "exclude": ["node_modules"]
 }
