--- a/package.json
+++ b/package.json
@@ -23,6 +23,25 @@
     "packages/*"
   ],
   "dependencies": {
-    "next-auth": "^4.24.7"
+    "@coreui/coreui": "^5.0.2",
+    "@coreui/react": "^5.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/youtube": "^0.0.50",
+    "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "googleapis": "^140.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "next-auth": "^4.24.7",
+    "react-bootstrap": "^2.10.4",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.11",
+    "uploadthing": "^6.13.2",
+    "youtube": "^0.1.0"
   }
 }
