--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
@@ -32,6 +31,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@types/youtube": "^0.0.50",
     "@uploadthing/react": "^6.7.2",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "googleapis": "^140.0.1",
