--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -13,9 +13,11 @@
     "@repo/db": "*",
     "@repo/types": "*",
     "@repo/ui": "*",
+    "autoprefixer": "^10.4.19",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
