--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -14,14 +14,17 @@
     "@repo/db": "*",
     "@repo/types": "*",
     "@repo/ui": "*",
+    "@uploadthing/react": "^6.7.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "next": "15.0.0-rc.0",
     "next-auth": "^4.24.7",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.2",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "uploadthing": "^6.13.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
