--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.6",
     "uploadthing": "^6.13.2"
