--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -18,6 +18,7 @@
     "@uploadthing/react": "^6.7.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "glob": "^11.0.0",
     "next": "15.0.0-rc.0",
     "next-auth": "^4.24.7",
     "react": "19.0.0-rc-f994737d14-20240522",
@@ -25,6 +26,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.6",
     "uploadthing": "^6.13.2"
   },
