--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "rimraf": "^6.0.1",
+    "styled-jsx": "^5.1.6",
     "tailwindcss": "^3.4.6",
     "uploadthing": "^6.13.2"
   },
