--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -15,7 +15,6 @@
     "@repo/db": "*",
     "@repo/types": "*",
     "@repo/ui": "*",
-    "@uploadthing/react": "^6.7.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "glob": "^11.0.0",
@@ -28,8 +27,7 @@
     "react-redux": "^9.1.2",
     "rimraf": "^6.0.1",
     "styled-jsx": "^5.1.6",
-    "tailwindcss": "^3.4.6",
-    "uploadthing": "^6.13.2"
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
